--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,12 @@ jobs:
       run: |
           cd src
           java Main
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: Build & push Docker image
+      with:
+          image: manugerminatech/estudandodevops
+          tags: QA-v1.${{ github.run_number}}
+          registry: docker.io
+          dockerfile: estudandoDevopsFile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
